# INE5430

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  functions.m  neural_network.m  original.m  run_tests.sh
ai/: CMakeLists.txt  Minimax.cpp  Minimax.hpp  Move.cpp  Move.hpp  MovesList.hpp  Util.hpp
apps/: CMakeLists.txt  main.cpp  performance_test.cpp
gui/: CMakeLists.txt  main.cpp
gui/control/: Facade.cpp  Facade.hpp
gui/view/: MainWindow.cpp  MainWindow.ui  WidgetGameBoard.cpp  WidgetGameBoard.hpp  WidgetGameBoard.ui
minimax/: CMakeLists.txt  Minimax.hpp
tests/: CMakeLists.txt  tests_minimax.cpp  tests_move.cpp
